--- a/index.css
+++ b/index.css
@@ -175,6 +175,7 @@ header {
 .hero .container {
   display: grid;
   grid-template-columns: 1fr;
+  gap: 1rem;
 }
 .hero .container .hero-container-text {
   width: 80%;
@@ -183,6 +184,7 @@ header {
   width: 80%;
   line-height: 1.3;
   margin-bottom: 10px;
+  font-size: 1.9rem;
 }
 .container .hero-container-text p {
   width: 100%;
@@ -242,7 +244,7 @@ header {
   }
   .container .hero-container-text h1 {
     width: 50%;
-    font-size: 2rem;
+    font-size: 2.2rem;
     letter-spacing: 2px;
   }
 
@@ -775,6 +777,19 @@ header {
 .contact-form button:hover {
   background-color: #005bb5;
 }
+
+@media screen and (min-width: 900px) {
+  .form-group label {
+    font-size: 1.4rem;
+  }
+  .form-group input,
+  .form-group textarea {
+    padding: 0.8rem 1.1rem;
+    border-radius: 9px;
+    font-size: 1.2rem;
+  }
+}
+
 
 /* CONTACT MAP */
 
